Fix the + sign to add a new CSS rule overlaps with text
This CL changes the height of the new rule toolbar to avoid it from overlapping last CSS rule (crbug/1225603) or CSS Rule Copy button (crbug/1297825).

Before and After changes:
Overlapping the Copy button - https://imgur.com/a/bebtU8S
Overlapping the CSS rule - https://imgur.com/a/3N59D18

Bug: 1225603
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/3643698
Commit-Queue: Saba Khukhunashvili <khukhunashvili@google.com>

--- a/front_end/panels/elements/stylesSidebarPane.css
+++ b/front_end/panels/elements/stylesSidebarPane.css
@@ -232,6 +232,9 @@
 
 .sidebar-pane-section-toolbar.new-rule-toolbar {
   visibility: hidden;
+  margin-bottom: 5px;
+
+  --toolbar-height: 16px;
 }
 
 .styles-pane:not(.is-editing-style) .styles-section.matched-styles:not(.read-only):hover .sidebar-pane-section-toolbar.new-rule-toolbar {
